# aia-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
airbnb/: server.py
charts/: server.py
mangadex/: server.py
mcp_cli/: __init__.py  cli.py  logging_middleware.py  tracer.py
mcp_email/: server.py
monitor/: __init__.py  server.py
shell/: server.py
specs/: SPEC_TEMPERATURA.md
temperatura/: __init__.py  server.py
tinaja/: __init__.py  server.py
wahapedia/: __init__.py  cache.py  server.py
